Supply analytics changes
