# api/protobuff/stats-api.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.10
-// 	protoc        v4.23.4
+// 	protoc-gen-go v1.36.11
+// 	protoc        v7.35.1
 // source: stats-api.proto
 
 package protobuff
@@ -672,6 +672,222 @@ func (x *GetLatestDataResponse) GetData() *QubicData {
 	return nil
 }
 
+type SupplyHistoryPoint struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	Epoch uint32                 `protobuf:"varint,1,opt,name=epoch,proto3" json:"epoch,omitempty"`
+	// Circulating supply at the end of this epoch, as measured by the spectrum file that was dumped
+	// at the transition into the next one.
+	CirculatingSupply int64 `protobuf:"varint,2,opt,name=circulating_supply,json=circulatingSupply,proto3" json:"circulating_supply,omitempty"`
+	// Cumulative issuance up to and including this epoch.
+	TotalEmitted int64 `protobuf:"varint,3,opt,name=total_emitted,json=totalEmitted,proto3" json:"total_emitted,omitempty"`
+	// When this epoch closed, in unix seconds. Display only.
+	Timestamp int64 `protobuf:"varint,4,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
+	// How the supply of this point was obtained. "spectrum" and "derived" are measured values,
+	// "carried-over" means that no spectrum file could be attributed to this epoch and the supply of
+	// an earlier one is repeated, which shows up as an epoch without any burn.
+	SupplySource  string `protobuf:"bytes,5,opt,name=supply_source,json=supplySource,proto3" json:"supply_source,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *SupplyHistoryPoint) Reset() {
+	*x = SupplyHistoryPoint{}
+	mi := &file_stats_api_proto_msgTypes[10]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *SupplyHistoryPoint) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SupplyHistoryPoint) ProtoMessage() {}
+
+func (x *SupplyHistoryPoint) ProtoReflect() protoreflect.Message {
+	mi := &file_stats_api_proto_msgTypes[10]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SupplyHistoryPoint.ProtoReflect.Descriptor instead.
+func (*SupplyHistoryPoint) Descriptor() ([]byte, []int) {
+	return file_stats_api_proto_rawDescGZIP(), []int{10}
+}
+
+func (x *SupplyHistoryPoint) GetEpoch() uint32 {
+	if x != nil {
+		return x.Epoch
+	}
+	return 0
+}
+
+func (x *SupplyHistoryPoint) GetCirculatingSupply() int64 {
+	if x != nil {
+		return x.CirculatingSupply
+	}
+	return 0
+}
+
+func (x *SupplyHistoryPoint) GetTotalEmitted() int64 {
+	if x != nil {
+		return x.TotalEmitted
+	}
+	return 0
+}
+
+func (x *SupplyHistoryPoint) GetTimestamp() int64 {
+	if x != nil {
+		return x.Timestamp
+	}
+	return 0
+}
+
+func (x *SupplyHistoryPoint) GetSupplySource() string {
+	if x != nil {
+		return x.SupplySource
+	}
+	return ""
+}
+
+type GetSupplyHistoryRequest struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// Inclusive. Defaults to the earliest available epoch.
+	FromEpoch uint32 `protobuf:"varint,1,opt,name=from_epoch,json=fromEpoch,proto3" json:"from_epoch,omitempty"`
+	// Inclusive. Defaults to the latest available epoch.
+	ToEpoch uint32 `protobuf:"varint,2,opt,name=to_epoch,json=toEpoch,proto3" json:"to_epoch,omitempty"`
+	// Maximum number of points. The most recent ones are kept when the range holds more.
+	Limit         int32 `protobuf:"varint,3,opt,name=limit,proto3" json:"limit,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetSupplyHistoryRequest) Reset() {
+	*x = GetSupplyHistoryRequest{}
+	mi := &file_stats_api_proto_msgTypes[11]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetSupplyHistoryRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetSupplyHistoryRequest) ProtoMessage() {}
+
+func (x *GetSupplyHistoryRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_stats_api_proto_msgTypes[11]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetSupplyHistoryRequest.ProtoReflect.Descriptor instead.
+func (*GetSupplyHistoryRequest) Descriptor() ([]byte, []int) {
+	return file_stats_api_proto_rawDescGZIP(), []int{11}
+}
+
+func (x *GetSupplyHistoryRequest) GetFromEpoch() uint32 {
+	if x != nil {
+		return x.FromEpoch
+	}
+	return 0
+}
+
+func (x *GetSupplyHistoryRequest) GetToEpoch() uint32 {
+	if x != nil {
+		return x.ToEpoch
+	}
+	return 0
+}
+
+func (x *GetSupplyHistoryRequest) GetLimit() int32 {
+	if x != nil {
+		return x.Limit
+	}
+	return 0
+}
+
+type GetSupplyHistoryResponse struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// Maximum amount of QUs that can ever exist. Constant, for a reference line.
+	SupplyCap                int64  `protobuf:"varint,1,opt,name=supply_cap,json=supplyCap,proto3" json:"supply_cap,omitempty"`
+	CurrentEpoch             uint32 `protobuf:"varint,2,opt,name=current_epoch,json=currentEpoch,proto3" json:"current_epoch,omitempty"`
+	CurrentCirculatingSupply int64  `protobuf:"varint,3,opt,name=current_circulating_supply,json=currentCirculatingSupply,proto3" json:"current_circulating_supply,omitempty"`
+	// Ordered by epoch ascending.
+	Points        []*SupplyHistoryPoint `protobuf:"bytes,4,rep,name=points,proto3" json:"points,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetSupplyHistoryResponse) Reset() {
+	*x = GetSupplyHistoryResponse{}
+	mi := &file_stats_api_proto_msgTypes[12]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetSupplyHistoryResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetSupplyHistoryResponse) ProtoMessage() {}
+
+func (x *GetSupplyHistoryResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_stats_api_proto_msgTypes[12]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetSupplyHistoryResponse.ProtoReflect.Descriptor instead.
+func (*GetSupplyHistoryResponse) Descriptor() ([]byte, []int) {
+	return file_stats_api_proto_rawDescGZIP(), []int{12}
+}
+
+func (x *GetSupplyHistoryResponse) GetSupplyCap() int64 {
+	if x != nil {
+		return x.SupplyCap
+	}
+	return 0
+}
+
+func (x *GetSupplyHistoryResponse) GetCurrentEpoch() uint32 {
+	if x != nil {
+		return x.CurrentEpoch
+	}
+	return 0
+}
+
+func (x *GetSupplyHistoryResponse) GetCurrentCirculatingSupply() int64 {
+	if x != nil {
+		return x.CurrentCirculatingSupply
+	}
+	return 0
+}
+
+func (x *GetSupplyHistoryResponse) GetPoints() []*SupplyHistoryPoint {
+	if x != nil {
+		return x.Points
+	}
+	return nil
+}
+
 var File_stats_api_proto protoreflect.FileDescriptor
 
 const file_stats_api_proto_rawDesc = "" +
@@ -732,11 +948,29 @@ const file_stats_api_proto_rawDesc = "" +
 	"\bidentity\x18\x01 \x01(\tR\bidentity\x12(\n" +
 	"\x10number_of_shares\x18\x02 \x01(\x03R\x0enumberOfShares\"J\n" +
 	"\x15GetLatestDataResponse\x121\n" +
-	"\x04data\x18\x01 \x01(\v2\x1d.qubic.stats.api.pb.QubicDataR\x04data2\xb5\x03\n" +
+	"\x04data\x18\x01 \x01(\v2\x1d.qubic.stats.api.pb.QubicDataR\x04data\"\xc1\x01\n" +
+	"\x12SupplyHistoryPoint\x12\x14\n" +
+	"\x05epoch\x18\x01 \x01(\rR\x05epoch\x12-\n" +
+	"\x12circulating_supply\x18\x02 \x01(\x03R\x11circulatingSupply\x12#\n" +
+	"\rtotal_emitted\x18\x03 \x01(\x03R\ftotalEmitted\x12\x1c\n" +
+	"\ttimestamp\x18\x04 \x01(\x03R\ttimestamp\x12#\n" +
+	"\rsupply_source\x18\x05 \x01(\tR\fsupplySource\"i\n" +
+	"\x17GetSupplyHistoryRequest\x12\x1d\n" +
+	"\n" +
+	"from_epoch\x18\x01 \x01(\rR\tfromEpoch\x12\x19\n" +
+	"\bto_epoch\x18\x02 \x01(\rR\atoEpoch\x12\x14\n" +
+	"\x05limit\x18\x03 \x01(\x05R\x05limit\"\xdc\x01\n" +
+	"\x18GetSupplyHistoryResponse\x12\x1d\n" +
+	"\n" +
+	"supply_cap\x18\x01 \x01(\x03R\tsupplyCap\x12#\n" +
+	"\rcurrent_epoch\x18\x02 \x01(\rR\fcurrentEpoch\x12<\n" +
+	"\x1acurrent_circulating_supply\x18\x03 \x01(\x03R\x18currentCirculatingSupply\x12>\n" +
+	"\x06points\x18\x04 \x03(\v2&.qubic.stats.api.pb.SupplyHistoryPointR\x06points2\xc7\x04\n" +
 	"\fStatsService\x12l\n" +
 	"\rGetLatestData\x12\x16.google.protobuf.Empty\x1a).qubic.stats.api.pb.GetLatestDataResponse\"\x18\x82\xd3\xe4\x93\x02\x12\x12\x10/v1/latest-stats\x12\x84\x01\n" +
 	"\x10GetRichListSlice\x12+.qubic.stats.api.pb.GetRichListSliceRequest\x1a,.qubic.stats.api.pb.GetRichListSliceResponse\"\x15\x82\xd3\xe4\x93\x02\x0f\x12\r/v1/rich-list\x12\xaf\x01\n" +
-	"\x0eGetAssetOwners\x12,.qubic.stats.api.pb.GetAssetOwnershipRequest\x1a-.qubic.stats.api.pb.GetAssetOwnershipResponse\"@\x82\xd3\xe4\x93\x02:\x128/v1/issuers/{issuer_identity}/assets/{asset_name}/ownersB-Z+github.com/qubic/qubic-stats-api/protobuff/b\x06proto3"
+	"\x0eGetAssetOwners\x12,.qubic.stats.api.pb.GetAssetOwnershipRequest\x1a-.qubic.stats.api.pb.GetAssetOwnershipResponse\"@\x82\xd3\xe4\x93\x02:\x128/v1/issuers/{issuer_identity}/assets/{asset_name}/owners\x12\x8f\x01\n" +
+	"\x10GetSupplyHistory\x12+.qubic.stats.api.pb.GetSupplyHistoryRequest\x1a,.qubic.stats.api.pb.GetSupplyHistoryResponse\" \x82\xd3\xe4\x93\x02\x1a\x12\x18/v1/stats/supply-historyB-Z+github.com/qubic/qubic-stats-api/protobuff/b\x06proto3"
 
 var (
 	file_stats_api_proto_rawDescOnce sync.Once
@@ -750,7 +984,7 @@ func file_stats_api_proto_rawDescGZIP() []byte {
 	return file_stats_api_proto_rawDescData
 }
 
-var file_stats_api_proto_msgTypes = make([]protoimpl.MessageInfo, 10)
+var file_stats_api_proto_msgTypes = make([]protoimpl.MessageInfo, 13)
 var file_stats_api_proto_goTypes = []any{
 	(*QubicData)(nil),                 // 0: qubic.stats.api.pb.QubicData
 	(*Pagination)(nil),                // 1: qubic.stats.api.pb.Pagination
@@ -762,7 +996,10 @@ var file_stats_api_proto_goTypes = []any{
 	(*GetAssetOwnershipResponse)(nil), // 7: qubic.stats.api.pb.GetAssetOwnershipResponse
 	(*AssetOwnership)(nil),            // 8: qubic.stats.api.pb.AssetOwnership
 	(*GetLatestDataResponse)(nil),     // 9: qubic.stats.api.pb.GetLatestDataResponse
-	(*emptypb.Empty)(nil),             // 10: google.protobuf.Empty
+	(*SupplyHistoryPoint)(nil),        // 10: qubic.stats.api.pb.SupplyHistoryPoint
+	(*GetSupplyHistoryRequest)(nil),   // 11: qubic.stats.api.pb.GetSupplyHistoryRequest
+	(*GetSupplyHistoryResponse)(nil),  // 12: qubic.stats.api.pb.GetSupplyHistoryResponse
+	(*emptypb.Empty)(nil),             // 13: google.protobuf.Empty
 }
 var file_stats_api_proto_depIdxs = []int32{
 	2,  // 0: qubic.stats.api.pb.RichList.entities:type_name -> qubic.stats.api.pb.RichListEntity
@@ -771,17 +1008,20 @@ var file_stats_api_proto_depIdxs = []int32{
 	1,  // 3: qubic.stats.api.pb.GetAssetOwnershipResponse.pagination:type_name -> qubic.stats.api.pb.Pagination
 	8,  // 4: qubic.stats.api.pb.GetAssetOwnershipResponse.owners:type_name -> qubic.stats.api.pb.AssetOwnership
 	0,  // 5: qubic.stats.api.pb.GetLatestDataResponse.data:type_name -> qubic.stats.api.pb.QubicData
-	10, // 6: qubic.stats.api.pb.StatsService.GetLatestData:input_type -> google.protobuf.Empty
-	4,  // 7: qubic.stats.api.pb.StatsService.GetRichListSlice:input_type -> qubic.stats.api.pb.GetRichListSliceRequest
-	6,  // 8: qubic.stats.api.pb.StatsService.GetAssetOwners:input_type -> qubic.stats.api.pb.GetAssetOwnershipRequest
-	9,  // 9: qubic.stats.api.pb.StatsService.GetLatestData:output_type -> qubic.stats.api.pb.GetLatestDataResponse
-	5,  // 10: qubic.stats.api.pb.StatsService.GetRichListSlice:output_type -> qubic.stats.api.pb.GetRichListSliceResponse
-	7,  // 11: qubic.stats.api.pb.StatsService.GetAssetOwners:output_type -> qubic.stats.api.pb.GetAssetOwnershipResponse
-	9,  // [9:12] is the sub-list for method output_type
-	6,  // [6:9] is the sub-list for method input_type
-	6,  // [6:6] is the sub-list for extension type_name
-	6,  // [6:6] is the sub-list for extension extendee
-	0,  // [0:6] is the sub-list for field type_name
+	10, // 6: qubic.stats.api.pb.GetSupplyHistoryResponse.points:type_name -> qubic.stats.api.pb.SupplyHistoryPoint
+	13, // 7: qubic.stats.api.pb.StatsService.GetLatestData:input_type -> google.protobuf.Empty
+	4,  // 8: qubic.stats.api.pb.StatsService.GetRichListSlice:input_type -> qubic.stats.api.pb.GetRichListSliceRequest
+	6,  // 9: qubic.stats.api.pb.StatsService.GetAssetOwners:input_type -> qubic.stats.api.pb.GetAssetOwnershipRequest
+	11, // 10: qubic.stats.api.pb.StatsService.GetSupplyHistory:input_type -> qubic.stats.api.pb.GetSupplyHistoryRequest
+	9,  // 11: qubic.stats.api.pb.StatsService.GetLatestData:output_type -> qubic.stats.api.pb.GetLatestDataResponse
+	5,  // 12: qubic.stats.api.pb.StatsService.GetRichListSlice:output_type -> qubic.stats.api.pb.GetRichListSliceResponse
+	7,  // 13: qubic.stats.api.pb.StatsService.GetAssetOwners:output_type -> qubic.stats.api.pb.GetAssetOwnershipResponse
+	12, // 14: qubic.stats.api.pb.StatsService.GetSupplyHistory:output_type -> qubic.stats.api.pb.GetSupplyHistoryResponse
+	11, // [11:15] is the sub-list for method output_type
+	7,  // [7:11] is the sub-list for method input_type
+	7,  // [7:7] is the sub-list for extension type_name
+	7,  // [7:7] is the sub-list for extension extendee
+	0,  // [0:7] is the sub-list for field type_name
 }
 
 func init() { file_stats_api_proto_init() }
@@ -795,7 +1035,7 @@ func file_stats_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_stats_api_proto_rawDesc), len(file_stats_api_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   10,
+			NumMessages:   13,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
